{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 7,
  "lineage": "9557414e-6b2f-7903-4b92-e5ce128158e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b57f1dd48848474",
            "arn": "arn:aws:ec2:us-east-1:652847051172:elastic-ip/eipalloc-02b57f1dd48848474",
            "association_id": "eipassoc-0e90311ed39eccb0a",
            "domain": "vpc",
            "id": "eipalloc-02b57f1dd48848474",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ad249b31629662f",
            "private_dns": "ip-10-0-0-29.ec2.internal",
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-54-157-160-123.compute-1.amazonaws.com",
            "public_ip": "54.157.160.123",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "production",
              "Project": "devops-na-nuvem"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:internet-gateway/igw-03ecbad8c9c83dd51",
            "id": "igw-03ecbad8c9c83dd51",
            "owner_id": "652847051172",
            "tags": {
              "Name": "devops-na-nuvem-vpc-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-internet-gateway",
              "Project": "devops-na-nuvem"
            },
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b57f1dd48848474",
            "association_id": "eipassoc-0e90311ed39eccb0a",
            "connectivity_type": "public",
            "id": "nat-09e511db444e2d29c",
            "network_interface_id": "eni-09ad249b31629662f",
            "private_ip": "10.0.0.29",
            "public_ip": "54.157.160.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf1b38d73afc3f66",
            "tags": {
              "Name": "devops-na-nuvem-vpc-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-nat-gateway",
              "Project": "devops-na-nuvem"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:route-table/rtb-07bfb261e11c87e27",
            "id": "rtb-07bfb261e11c87e27",
            "owner_id": "652847051172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09e511db444e2d29c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-vpc-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-private-route-table",
              "Project": "devops-na-nuvem"
            },
            "timeouts": null,
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:route-table/rtb-0eabbd19590f00172",
            "id": "rtb-0eabbd19590f00172",
            "owner_id": "652847051172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ecbad8c9c83dd51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-vpc-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-public-route-table",
              "Project": "devops-na-nuvem"
            },
            "timeouts": null,
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02efcec0cf707b6c1",
            "route_table_id": "rtb-07bfb261e11c87e27",
            "subnet_id": "subnet-04e597eedef3842d0"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d66837f230c8c8ff",
            "route_table_id": "rtb-07bfb261e11c87e27",
            "subnet_id": "subnet-0e6d3bcff6c3ceefe"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7628e2bd0e5a19",
            "route_table_id": "rtb-0eabbd19590f00172",
            "subnet_id": "subnet-0cf1b38d73afc3f66"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a59b7c6b743dc68",
            "route_table_id": "rtb-0eabbd19590f00172",
            "subnet_id": "subnet-0acdfa4a0d83903eb"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:subnet/subnet-04e597eedef3842d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e597eedef3842d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652847051172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-vpc-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-private-subnet-us-east-1a",
              "Project": "devops-na-nuvem"
            },
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:subnet/subnet-0e6d3bcff6c3ceefe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d3bcff6c3ceefe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652847051172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-vpc-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-private-subnet-us-east-1b",
              "Project": "devops-na-nuvem"
            },
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:subnet/subnet-0cf1b38d73afc3f66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf1b38d73afc3f66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652847051172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-vpc-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-public-subnet-us-east-1a",
              "Project": "devops-na-nuvem"
            },
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:subnet/subnet-0acdfa4a0d83903eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acdfa4a0d83903eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652847051172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-vpc-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc-public-subnet-us-east-1b",
              "Project": "devops-na-nuvem"
            },
            "vpc_id": "vpc-062ef178c22fcaba0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652847051172:vpc/vpc-062ef178c22fcaba0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ad4bb7cf4f2654b6",
            "default_route_table_id": "rtb-0b514d4e43894f2cb",
            "default_security_group_id": "sg-0c95818333440bd57",
            "dhcp_options_id": "dopt-06d0b92c150a135e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062ef178c22fcaba0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b514d4e43894f2cb",
            "owner_id": "652847051172",
            "tags": {
              "Name": "devops-na-nuvem-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-vpc",
              "Project": "devops-na-nuvem"
            }
          }
        }
      ]
    }
  ]
}